--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "brussens/yii2-bootstrap-select",
-    "description": "Bootstrap select widget for Yii2",
+    "name": "OrlandoST/yii2-bootstrap-select",
+    "description": "Bootstrap select widget for Yii2 with colors",
     "keywords": ["yii", "extension", "widget", "select"],
     "type": "yii2-extension",
     "license": "MIT",
     "authors": [
         {
-            "name": "Brusenskiy Dmitry",
-            "email": "brussens@nativeweb.ru"
+            "name": "Pavel Orlov",
+            "email": "orlandop@rambler.ru"
         }
     ],
     "support": {
-        "issues": "https://github.com/brussens/yii2-bootstrap-select/issues?state=open",
-        "source": "https://github.com/brussens/yii2-bootstrap-select"
+        "issues": "https://github.com/OrlandoST/yii2-bootstrap-select/issues?state=open",
+        "source": "https://github.com/OrlandoST/yii2-bootstrap-select"
     },
     "require": {
         "yiisoft/yii2": "*",
@@ -20,7 +20,7 @@
     },
     "autoload": {
         "psr-4": {
-            "brussens\\bootstrap\\select\\": ""
+            "OrlandoST\\bootstrap\\select\\": ""
         }
     }
 }
